--- a/.dvc/config
+++ b/.dvc/config
@@ -1,5 +1,6 @@
 [core]
     remote = yandexs3
+    autostage = true
 ['remote "yandexs3"']
     url = s3://books-2402
     endpointurl = https://storage.yandexcloud.net
